# musicGenerator

./: .gitignore  README.md  main.py  pyproject.toml  server.py
music/: music_generator.py  task_manager.py
